fix: align button content to center fix for iOS

--- a/src/shared/ui/button/button.module.scss
+++ b/src/shared/ui/button/button.module.scss
@@ -1,4 +1,5 @@
 .button {
+	align-items: center;
 	background-color: var(--color-bg);
 	border-radius: var(--radius-sm);
 	color: var(--color-text-primary);
